# nonebot_plugin_easyCommand

./: README.md  pyproject.toml  setup.py  update.bat
nonebot_plugin_easyCommand/: __init__.py  utils.py
nonebot_plugin_easyCommand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
